Create dataset & Import data from CSV
for beginners, beta 1

--- a/Web.Statu/Views/Data/CreateSimple.cshtml
+++ b/Web.Statu/Views/Data/CreateSimple.cshtml
@@ -44,8 +44,8 @@
     <div class="col-xs-12 col-sm-offset-1 col-sm-11">
         <h2>Jak na to?</h2>
         <p>
-            Tento postup je vhodný pro situace, kdy máte jednoúrovnovou strukturu dat, nebo-li - data se dají zobrazit v Excelu ve formě jedné tabulky
-            a tabulka má pro všechny řádky sloupce se stále stejným významem.
+            Tento postup je vhodný pro situace, kdy máte jednoduchou (plochou)s strukturu dat, neboli když se data dají zobrazit v Excelu ve formě jedné tabulky
+            a tabulka má pro všechny řádky stejný počet sloupců.
         </p>
     </div>
     <h3>1. krok</h3>
