--- a/Web.Statu/Views/Data/CreateSimple3.cshtml
+++ b/Web.Statu/Views/Data/CreateSimple3.cshtml
@@ -46,10 +46,35 @@
 
 <div class="row">
     <div class="col-xs-12 ">
-        <h2>Krok 3</h2>
+        <h2>Dataset úspěšně vytvořen!</h2>
         <p>
-            Nahráli jste nám CSV soubor. Na první, rychlý pohled vypadá, že je v pořádku. Abychom mohli data nahrát do Hlídače,
-            potřebujeme se od vás dozvědět, který sloupec obsahuje čísla, který texty, datumy apod.
+            Gratulujeme, dataset byl úspěšně vytvořen. V tuto chvíli neobsahuje žádná data.
         </p>
+        @if (Model.NumOfRows == 0)
+        {
+            <p>
+                CSV soubor, který jsme použili pro vytvoření tohoto datasetu, neobsahuje žádná data.
+                Můžete je kdykoliv (najednou i po částech) nahrát ve <a href="@Url.Action("manage",new { id = Model.Name })">správě datasetu</a>.
+            </p>
+            <p>
+                <a class="btn btn-success" href="@Url.Action("importdata",new { id = Model.Name })">Nahrát nová data do datasetu</a>
+                <a class="btn btn-primary" href="@Url.Action("manage",new { id = Model.Name })">Spravovat dataset</a>
+                <a class="btn btn-default" href="/">Zpět na titulku</a>
+            </p>
+
+        }
+        else
+        {
+            <p>
+                CSV soubor, který jsme použili pro vytvoření tohoto datasetu,
+                obsahuje <b>@Devmasters.Core.Lang.Plural.Get(Model.NumOfRows, "jeden záznam", "{0} záznamy", "{0} záznamů")</b>.
+                Tyto záznamy můžeme nyní uložit do datasetu. Stejně tak data můžete později (najednou i po částech) nahrát do Hlídače ve <a href="@Url.Action("manage",new { id = Model.Name })">správě datasetu</a>.
+            </p>
+            <p>
+                <a class="btn btn-success" href="@Url.Action("importdata",new { id = Model.Name, fileid= Model.FileId })">Nahrát @Devmasters.Core.Lang.Plural.Get(Model.NumOfRows, "jeden záznam", "{0} záznamy", "{0} záznamů") nyní</a>
+                <a class="btn btn-primary" href="@Url.Action("manage",new { id = Model.Name })">Spravovat dataset</a>
+                <a class="btn btn-default" href="/">Zpět na titulku</a>
+            </p>
+        }
     </div>
 </div>
