--- a/Web.Statu/Views/Data/Index.cshtml
+++ b/Web.Statu/Views/Data/Index.cshtml
@@ -14,7 +14,7 @@
         .Result
         .Select(s => Newtonsoft.Json.JsonConvert.DeserializeObject<HlidacStatu.Lib.Data.External.DataSets.Registration>(s.Item2));
 
-    if (showBeta == false ) //pokud neni parametr beta, pak beta datasety neukazuj
+    if (showBeta == false) //pokud neni parametr beta, pak beta datasety neukazuj
     {
         datasets = datasets.Where(m => m.betaversion == false);
     }
@@ -58,75 +58,76 @@
                 );
             if (ds.betaversion && shownFirstBeta == false)
             {
-                shownFirstBeta =true;
-    <div class="col-xs-12">
-        <hr />
-        <hr />
-        <div class="panel panel-warning">
-            <div class="panel-heading">
-                <h3 class="panel-title">Datasety v testovacím provozu</h3>
-            </div>
-            <div class="panel-body">
-                Mohou být nefunkční, obsahovat zkušební, neúplná či testovací data.
-            </div>
-        </div>
+                shownFirstBeta = true;
+                <div class="col-xs-12">
+                    <hr />
+                    <hr />
+                    <div class="panel panel-warning">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Datasety v testovacím provozu</h3>
+                        </div>
+                        <div class="panel-body">
+                            Mohou být nefunkční, obsahovat zkušební, neúplná či testovací data.
+                        </div>
+                    </div>
 
-    </div>
+                </div>
             }
 
-                    <div class="col-xs-12 col-sm-6">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <div class="row">
-                                    <div class="col-xs-8 col-sm-9">
-                                        <b>@ds.name</b>
-                                        @if (showEditBtn)
-                                        {
-                                            <text>
-                                                <a href="/data/Manage/@dsContent.DatasetId" alt="Editovat nastavení datasetu" title="Editovat nastavení datasetu"><i class="far fa-edit"></i></a>
-                                            </text>
-                                        }
+            <div class="col-xs-12 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <div class="row">
+                            <div class="col-xs-8 col-sm-9">
+                                <b>@ds.name</b>
+                                @if (showEditBtn)
+                                {
+                                    <text>
+                                        <a href="/data/Manage/@dsContent.DatasetId" alt="Editovat nastavení datasetu" title="Editovat nastavení datasetu"><i class="far fa-edit"></i></a>
+                                    </text>
+                                }
 
-                                    </div>
-                                    <div class="col-xs-4 col-sm-3">
-                                        (<b>@dsContent.SearchData("", 1, 0).Total</b> záznamů)
-                                    </div>
-                                </div>
                             </div>
-                            <div class="panel-body">
-                                <p>
-                                    @if (!string.IsNullOrEmpty(ds.description))
-                                    {
-                                        @(ds.description.ToString())
-                                    }
-                                </p>
-
-                                <div>
-                                    <form method="get" action="/data/Hledat/@dsContent.DatasetId" class="form-inline ">
-                                        <div class="form-group form-group">
-                                            <input type="text" class="form-control" id="q" name="q" placeholder="hledaný text">
-                                        </div>
-                                        <button type="submit" class="btn btn-primary">Prohledat</button>
-                                    </form>
-                                </div>
-                                <div>
-                                    <a href="/data/Hledat/@dsContent.DatasetId?q=*&order=DbCreated+desc" class="btn btn-default">Vypsat poslední data</a>
-                                    <a href="/data/Index/@dsContent.DatasetId" class="btn btn-default" style="margin-left:10px">Více info o datasetu</a>
-                                </div>
+                            <div class="col-xs-4 col-sm-3">
+                                (<b>@dsContent.SearchData("", 1, 0).Total</b> záznamů)
                             </div>
                         </div>
-
                     </div>
-                    if (count % 2 == 0)
-                    {
-                    <div class="clearfix"></div>
-                    }
-                    }
-                    catch (Exception)
-                    {
+                    <div class="panel-body">
+                        <p>
+                            @if (!string.IsNullOrEmpty(ds.description))
+                            {
+                                @(ds.description.ToString())
+                            }
+                        </p>
 
-                    }
-
-                    }
+                        <div>
+                            <form method="get" action="/data/Hledat/@dsContent.DatasetId" class="form-inline ">
+                                <div class="form-group form-group">
+                                    <input type="text" class="form-control" id="q" name="q" placeholder="hledaný text">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Prohledat</button>
+                            </form>
+                        </div>
+                        <div>
+                            <a href="/data/Hledat/@dsContent.DatasetId?q=*&order=DbCreated+desc" class="btn btn-default">Vypsat poslední data</a>
+                            <a href="/data/Index/@dsContent.DatasetId" class="btn btn-default" style="margin-left:10px">Více info o datasetu</a>
+                        </div>
+                    </div>
                 </div>
 
+            </div>
+            if (count % 2 == 0)
+            {
+                <div class="clearfix"></div>
+            }
+        }
+        catch (Exception)
+        {
+
+        }
+
+    }
+</div>
+
+@Html.Partial("_new")
