--- a/Web.Statu/Views/Data/Manage.cshtml
+++ b/Web.Statu/Views/Data/Manage.cshtml
@@ -25,7 +25,7 @@
 
 
 
-@if (Model != null 
+@if (Model != null
     && (HlidacStatu.Lib.Data.External.DataSets.DataSet.Api.SuperUsers.Contains(email) || email == Model.createdBy)
 )
 {
@@ -48,7 +48,7 @@
             </p>
         </div>
         <div class="col-xs-12 col-sm-4">
-            <a href="#/data/delete/@Model.id" class="btn btn-danger" disabled="disabled">Smazat dataset</a>
+            <a href="/data/delete/@Model.id" class="btn btn-danger" onclick="return confirm('Opravdu smazat?');">Smazat dataset</a>
             <p class="text-danger">
                 Nevratná operace, kdy se smažou všechna data datasetu a jeho nastavení.
                 Doporučujeme si <b>stáhnout zálohu parametrů datasetu</b>.
@@ -80,3 +80,4 @@
     </div>
 
 </div>
+@Html.Partial("_new")
